--- a/.github/workflows/ci_linux_clang.yml
+++ b/.github/workflows/ci_linux_clang.yml
@@ -10,7 +10,7 @@ env:
   proc_num: $(nproc)
 
 jobs:
-  gcc-compile-with-make:
+  clang-compile-with-make:
     runs-on: ubuntu-latest # https://github.com/actions/runner-images
 
     steps:
@@ -21,12 +21,12 @@ jobs:
            sudo apt-get install -y git g++ make libssl-dev libgflags-dev libprotobuf-dev libprotoc-dev protobuf-compiler libleveldb-dev libgoogle-perftools-dev
     - name: config_brpc
       run: |
-           ./config_brpc.sh --header="/usr/local/include /usr/include" --libs="/usr/local/lib /usr/local/lib64 /usr/lib /usr/lib64"
+           ./config_brpc.sh --header="/usr/local/include /usr/include" --libs="/usr/local/lib /usr/local/lib64 /usr/lib /usr/lib64" --nodebugsymbols --cxx=clang++ --cc=clang
     - name: compile
       run: |
            make -j ${{env.proc_num}}
    
-  gcc-compile-with-cmake:
+  clang-compile-with-cmake:
     runs-on: ubuntu-latest
 
     steps:
@@ -37,6 +37,8 @@ jobs:
            sudo apt-get install -y git g++ make libssl-dev libgflags-dev libprotobuf-dev libprotoc-dev protobuf-compiler libleveldb-dev
     - name: cmake 
       run: |
+           export CC=clang
+           export CXX=clang++
            mkdir build
            cd build
            cmake ..
@@ -45,16 +47,3 @@ jobs:
            cd build
            make -j ${{env.proc_num}}
            
-  gcc-compile-with-bazel:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-    
-    - name: install dependences
-      run: |
-           sudo apt-get update
-           sudo apt-get install libibverbs-dev
-    - name: compile
-      run: |
-           bazel build -j ${{env.proc_num}} -c opt --copt -DHAVE_ZLIB=1 //...
