--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -19,29 +19,12 @@ jobs:
     - name: install dependences
       run: |
            sudo apt-get install -y git g++ make libssl-dev libgflags-dev libprotobuf-dev libprotoc-dev protobuf-compiler libleveldb-dev libgoogle-perftools-dev
-    - name: config_brpc
+    - name: config brpc
       run: |
            ./config_brpc.sh --header="/usr/local/include /usr/include" --libs="/usr/local/lib /usr/local/lib64 /usr/lib /usr/lib64"
     - name: compile
       run: |
            make -j ${{env.proc_num}}
-
-  clang-compile-with-make:
-    runs-on: ubuntu-latest # https://github.com/actions/runner-images
-
-    steps:
-    - uses: actions/checkout@v2
-    
-    - name: install dependences
-      run: |
-           sudo apt-get install -y git g++ make libssl-dev libgflags-dev libprotobuf-dev libprotoc-dev protobuf-compiler libleveldb-dev libgoogle-perftools-dev
-    - name: config_brpc
-      run: |
-           ./config_brpc.sh --header="/usr/local/include /usr/include" --libs="/usr/local/lib /usr/local/lib64 /usr/lib /usr/lib64" --nodebugsymbols --cxx=clang++ --cc=clang
-    - name: compile
-      run: |
-           make -j ${{env.proc_num}}
-
 
   gcc-compile-with-cmake:
     runs-on: ubuntu-latest
@@ -54,27 +37,6 @@ jobs:
            sudo apt-get install -y git g++ make libssl-dev libgflags-dev libprotobuf-dev libprotoc-dev protobuf-compiler libleveldb-dev
     - name: cmake 
       run: |
-           mkdir build
-           cd build
-           cmake ..
-    - name: compile
-      run: |
-           cd build
-           make -j ${{env.proc_num}}
-           
-  clang-compile-with-cmake:
-    runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v2
-    
-    - name: install dependences
-      run: |
-           sudo apt-get install -y git g++ make libssl-dev libgflags-dev libprotobuf-dev libprotoc-dev protobuf-compiler libleveldb-dev
-    - name: cmake 
-      run: |
-           export CC=clang
-           export CXX=clang++
            mkdir build
            cd build
            cmake ..
@@ -98,3 +60,55 @@ jobs:
            bazel build -j ${{env.proc_num}} -c opt --copt -DHAVE_ZLIB=1 //...
 
    
+  clang-compile-with-make:
+    runs-on: ubuntu-latest # https://github.com/actions/runner-images
+
+    steps:
+    - uses: actions/checkout@v2
+    
+    - name: install dependences
+      run: |
+           sudo apt-get install -y git g++ make libssl-dev libgflags-dev libprotobuf-dev libprotoc-dev protobuf-compiler libleveldb-dev libgoogle-perftools-dev
+    - name: config brpc
+      run: |
+           ./config_brpc.sh --header="/usr/local/include /usr/include" --libs="/usr/local/lib /usr/local/lib64 /usr/lib /usr/lib64" --nodebugsymbols --cxx=clang++ --cc=clang
+    - name: compile
+      run: |
+           make -j ${{env.proc_num}}
+
+  clang-compile-with-cmake:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    
+    - name: install dependences
+      run: |
+           sudo apt-get install -y git g++ make libssl-dev libgflags-dev libprotobuf-dev libprotoc-dev protobuf-compiler libleveldb-dev
+    - name: cmake 
+      run: |
+           export CC=clang
+           export CXX=clang++
+           mkdir build
+           cd build
+           cmake ..
+    - name: compile
+      run: |
+           cd build
+           make -j ${{env.proc_num}}
+
+  clang-compile-with-bazel:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    
+    - name: install dependences
+      run: |
+           sudo apt-get update
+           sudo apt-get install libibverbs-dev
+    - name: compile
+      run: |
+           export CC=clang
+           export CXX=clang++
+           bazel build -j ${{env.proc_num}} -c opt --copt -DHAVE_ZLIB=1 //...
