--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -12,29 +12,19 @@ env:
 jobs:
   gcc-compile-with-make:
     runs-on: ubuntu-latest # https://github.com/actions/runner-images
-
     steps:
     - uses: actions/checkout@v2
-    
-    - name: install dependences
-      run: |
-           sudo apt-get install -y git g++ make libssl-dev libgflags-dev libprotobuf-dev libprotoc-dev protobuf-compiler libleveldb-dev libgoogle-perftools-dev
-    - name: config brpc
-      run: |
-           ./config_brpc.sh --header="/usr/local/include /usr/include" --libs="/usr/local/lib /usr/local/lib64 /usr/lib /usr/lib64"
+    - uses: ./.github/actions/install-dependences
+    - uses: ./.github/actions/init-make-config
     - name: compile
       run: |
            make -j ${{env.proc_num}}
 
   gcc-compile-with-cmake:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
-    
-    - name: install dependences
-      run: |
-           sudo apt-get install -y git g++ make libssl-dev libgflags-dev libprotobuf-dev libprotoc-dev protobuf-compiler libleveldb-dev
+    - uses: ./.github/actions/install-dependences
     - name: cmake 
       run: |
            mkdir build
@@ -47,10 +37,8 @@ jobs:
 
   gcc-compile-with-bazel:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
-    
     - name: install dependences
       run: |
            sudo apt-get update
@@ -59,32 +47,63 @@ jobs:
       run: |
            bazel build -j ${{env.proc_num}} -c opt --copt -DHAVE_ZLIB=1 //...
 
-   
-  clang-compile-with-make:
-    runs-on: ubuntu-latest # https://github.com/actions/runner-images
-
+  gcc-compile-with-make-all-options:
+    runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    
+    - uses: ./.github/actions/install-all-dependences
+    - uses: ./.github/actions/init-make-config
+      with:
+        options: --with-thrift --with-glog
+    - name: compile
+      run: |
+           make -j ${{env.proc_num}}
+
+  gcc-compile-with-cmake-all-options:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: ./.github/actions/install-all-dependences
+    - name: cmake 
+      run: |
+           mkdir build
+           cd build
+           cmake -DWITH_MESALINK=OFF -DWITH_GLOG=ON -DWITH_THRIFT=ON ..
+    - name: compile
+      run: |
+           cd build
+           make -j ${{env.proc_num}}
+
+  gcc-compile-with-bazel-all-options:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
     - name: install dependences
       run: |
-           sudo apt-get install -y git g++ make libssl-dev libgflags-dev libprotobuf-dev libprotoc-dev protobuf-compiler libleveldb-dev libgoogle-perftools-dev
-    - name: config brpc
+           sudo apt-get update
+           sudo apt-get install libibverbs-dev
+    - name: compile
       run: |
-           ./config_brpc.sh --header="/usr/local/include /usr/include" --libs="/usr/local/lib /usr/local/lib64 /usr/lib /usr/lib64" --nodebugsymbols --cxx=clang++ --cc=clang
+           bazel build -j 12 -c opt --define with_mesalink=false --define with_glog=true --define with_thrift=true --copt -DHAVE_ZLIB=1 //...
+
+
+  clang-compile-with-make:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: ./.github/actions/install-dependences
+    - uses: ./.github/actions/init-make-config
+      with:
+        options: --cc=clang --cxx=clang++
     - name: compile
       run: |
            make -j ${{env.proc_num}}
 
   clang-compile-with-cmake:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
-    
-    - name: install dependences
-      run: |
-           sudo apt-get install -y git g++ make libssl-dev libgflags-dev libprotobuf-dev libprotoc-dev protobuf-compiler libleveldb-dev
+    - uses: ./.github/actions/install-dependences
     - name: cmake 
       run: |
            export CC=clang
@@ -99,10 +118,8 @@ jobs:
 
   clang-compile-with-bazel:
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
-    
     - name: install dependences
       run: |
            sudo apt-get update
@@ -112,3 +129,46 @@ jobs:
            export CC=clang
            export CXX=clang++
            bazel build -j ${{env.proc_num}} -c opt --copt -DHAVE_ZLIB=1 //...
+
+  clang-compile-with-make-all-options:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: ./.github/actions/install-all-dependences
+    - uses: ./.github/actions/init-make-config
+      with:
+        options: --cc=clang --cxx=clang++ --with-thrift --with-glog
+    - name: compile
+      run: |
+           make -j ${{env.proc_num}}
+
+  clang-compile-with-cmake-all-options:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: ./.github/actions/install-all-dependences
+    - name: cmake 
+      run: |
+           export CC=clang
+           export CXX=clang++
+           mkdir build
+           cd build
+           cmake -DWITH_MESALINK=OFF -DWITH_GLOG=ON -DWITH_THRIFT=ON ..
+    - name: compile
+      run: |
+           cd build
+           make -j ${{env.proc_num}}
+
+  clang-compile-with-bazel-all-options:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: install dependences
+      run: |
+           sudo apt-get update
+           sudo apt-get install libibverbs-dev
+    - name: compile
+      run: |
+           export CC=clang
+           export CXX=clang++
+           bazel build -j ${{env.proc_num}} -c opt --define with_mesalink=false --define with_glog=true --define with_thrift=true --copt -DHAVE_ZLIB=1 //...
