--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -20,6 +20,8 @@ jobs:
         options: --cc=gcc --cxx=g++
     - name: compile
       run: |
+           # TODO: 其实make过程中有这个protoc命令，但这里不单独执行一次，经常会导致mcpack2pb编译失败，后续再排查解决
+           /usr/bin/protoc --cpp_out=./src --proto_path=./src --proto_path=/usr/include/ src/idl_options.proto
            make -j ${{env.proc_num}}
 
   gcc-compile-with-cmake:
