--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -11,7 +11,7 @@ env:
 
 jobs:
   gcc-compile-with-make:
-    runs-on: ubuntu-latest # https://github.com/actions/runner-images
+    runs-on: ubuntu-20.04 # https://github.com/actions/runner-images
     steps:
     - uses: actions/checkout@v2
     - uses: ./.github/actions/install-essential-dependences
@@ -23,7 +23,7 @@ jobs:
            make -j ${{env.proc_num}}
 
   gcc-compile-with-cmake:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
     - uses: ./.github/actions/install-essential-dependences
@@ -39,7 +39,7 @@ jobs:
            make -j ${{env.proc_num}}
 
   gcc-compile-with-bazel:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
     - name: install dependences
@@ -52,7 +52,7 @@ jobs:
            bazel build -j ${{env.proc_num}} -c opt --copt -DHAVE_ZLIB=1 //...
 
   gcc-compile-with-make-all-options:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
     - uses: ./.github/actions/install-all-dependences
@@ -64,7 +64,7 @@ jobs:
            make -j ${{env.proc_num}}
 
   gcc-compile-with-cmake-all-options:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
     - uses: ./.github/actions/install-all-dependences
@@ -80,7 +80,7 @@ jobs:
            make -j ${{env.proc_num}}
 
   gcc-compile-with-bazel-all-options:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
     - name: install dependences
@@ -94,7 +94,7 @@ jobs:
 
 
   clang-compile-with-make:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
     - uses: ./.github/actions/install-essential-dependences
@@ -106,7 +106,7 @@ jobs:
            make -j ${{env.proc_num}}
 
   clang-compile-with-cmake:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
     - uses: ./.github/actions/install-essential-dependences
@@ -122,7 +122,7 @@ jobs:
            make -j ${{env.proc_num}}
 
   clang-compile-with-bazel:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
     - name: install dependences
@@ -135,7 +135,7 @@ jobs:
            bazel build -j ${{env.proc_num}} -c opt --copt -DHAVE_ZLIB=1 //...
 
   clang-compile-with-make-all-options:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
     - uses: ./.github/actions/install-all-dependences
@@ -147,7 +147,7 @@ jobs:
            make -j ${{env.proc_num}}
 
   clang-compile-with-cmake-all-options:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
     - uses: ./.github/actions/install-all-dependences
@@ -163,7 +163,7 @@ jobs:
            make -j ${{env.proc_num}}
 
   clang-compile-with-bazel-all-options:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
     - name: install dependences
@@ -176,7 +176,7 @@ jobs:
            bazel build -j ${{env.proc_num}} -c opt --define with_mesalink=false --define with_glog=true --define with_thrift=true --copt -DHAVE_ZLIB=1 //...
 
   clang-unittest:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
     - uses: actions/checkout@v2
     - uses: ./.github/actions/install-essential-dependences
