--- a/.github/actions/init-make-config/action.yml
+++ b/.github/actions/init-make-config/action.yml
@@ -5,5 +5,5 @@ inputs:
 runs:
   using: "composite"
   steps:
-    - run: sh config_brpc.sh --headers="/usr/local/include /usr/include" --libs="/usr/local/lib /usr/local/lib64 /usr/lib /usr/lib64 /usr/lib/x86_64-linux-gnu/" --nodebugsymbols ${{inputs.options}}
+    - run: sh config_brpc.sh --headers="/usr/local/include /usr/include" --libs="/usr/local/lib /usr/local/lib64 /usr/lib/x86_64-linux-gnu /usr/lib /usr/lib64" --nodebugsymbols ${{inputs.options}}
       shell: bash
