--- a/.github/workflows/ci-macos.yml
+++ b/.github/workflows/ci-macos.yml
@@ -50,3 +50,21 @@ jobs:
       run: |
            cd build
            make -j ${{env.proc_num}}
+  
+  gcc-compile-with-bazel:
+    runs-on: macos-latest
+
+    steps:
+    - uses: actions/checkout@v2
+
+    - name: install dependences
+      run: |
+          brew update
+          brew install libibverbs
+
+    - name: compile
+      run: |
+          export CC=gcc && export CXX=g++
+          bazel build -j ${{env.proc_num}} -c opt --copt -DHAVE_ZLIB=1 //...
+
+    
