--- a/.github/workflows/cpp-linter.yml
+++ b/.github/workflows/cpp-linter.yml
@@ -2,9 +2,13 @@ name: Linter Check
 
 on:
   pull_request:
+    paths-ignore:
+      - '**.md'
   push:
     branches:
       - master
+    paths-ignore:
+      - '**.md'
 
 jobs:
   cpp-linter:
